# hw

./: .env.example  .gitignore  LICENSE  README.md  belch.py  browser-test.py  ingest.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  turbo.json
ai/: ai.py  browser-test.py  hw.py  news-test.py  package-lock.json  package.json  pyproject.toml
api/: agent.py  main.py
app/: layout.tsx  page.tsx
app/actions/: classes.ts  user.ts
app/components/: Sidebar.tsx
documents/: README.md
prisma/: dev.db  schema.prisma
web/: .env.example  .gitignore  bun.lockb  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: actions.tsx  globals.css  layout.tsx  page.tsx
web/app/add-class/: page.tsx
web/app/api/auth/[...nextauth]/: route.ts
web/app/api/chat/: route.ts
web/app/api/uploadthing/: core.ts
web/app/components/: upload-btn.tsx  upload-zone.tsx
web/app/courses/[id]/: page.tsx  upload-button.tsx
web/app/courses/manage/: delete-button.tsx  page.tsx
web/app/courses/new/: page.tsx
web/app/login/: page.tsx
web/components/: sign-in.tsx
web/prisma/: schema.prisma
web/utils/: uploadthing.ts
workers/: ingest.py
